<resources>

    <string name="title_term_date_collector">Term dates</string>
    <string name="title_subject_input">Subjects</string>
    <string name="title_activity_home">Home</string>
    <string name="title_subject_collector">Subjects</string>
    <string name="title_term_collector">Terms</string>
    <string name="title_term_input">New Term</string>
    <string name="title_term_input_edit">Edit Term</string>
    <string name="title_homework_input">New Homework</string>
    <string name="title_homework_input_edit">Edit Homework</string>

    <string name="label_name_entry">Enter your name</string>
    <string name="label_ok_button">OK</string>
    <string name="label_action_edit">Edit</string>
    <string name="label_homework_due_date">Due Date</string>
    <string name="label_edit">EDIT</string>
    <string name="label_done">DONE</string>
    <string name="label_color_picker">Color</string>
    <string name="label_subject_spinner">Subject</string>

    <string name="hint_term_start">From</string>
    <string name="hint_term_end">To</string>
    <string name="hint_term_name">Term name</string>
    <string name="hint_title">Title</string>
    <string name="hint_homework_detail">Detail</string>
    <string name="hint_assessment_notes">Notes</string>
    <string name="hint_assessment_title">Paper Title</string>
    <string name="hint_assessment_date">Date</string>
    <string name="hint_name_first">First name</string>
    <string name="hint_name_last">Last name</string>
    <string name="hint_subject_name">Subject name</string>
    <string name="hint_teacher_name">Teacher</string>
    <string name="hint_class_input">Classroom</string>
    <string name="hint_subject_topics">Topics</string>

    <string name="message_no_classes">No classes today</string>
    <string name="message_no_classes_created">No classes created</string>
    <string name="message_no_subjects_created">No subject created</string>
    <string name="message_no_tasks">No current tasks</string>
    <string name="message_no_terms_created">Add your terms</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_edit_terms">Terms</string>
    <string name="menu_edit_subjects">Subjects</string>
    <string name="menu_edit_classes">Classes</string>

    <string name="error_no_term_name">Please set a name</string>
    <string name="error_no_start_date">Please set a start date</string>
    <string name="error_no_end_date">Please set an end date</string>
    <string name="error_start_date_after_end">Start date must be before end date</string>
    <string name="error_end_date_before_start">End date must be after start date</string>
    <string name="error_overlapping_terms">This terms overlaps %1$s. Delete %2$s?</string>
    <string name="error_overlapping_classes">This class overlaps %1$s. Delete the other class?</string>


    <!--TODO Fix these strings-->
    <string name="homework">Homework</string>
    <string name="task">Task</string>
    <string name="reminder">Reminder</string>
    <string name="assessment">Assessment</string>
    <string name="show_reminder">Show Reminder</string>
    <string name="end_time">End time</string>
    <string name="start_time">Start time</string>
    <string name="app_name">Timetable</string>
    <string name="action_settings">Settings</string>
</resources>
