<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--Icons will be set by ThemeUtils if needed-->

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_action_search"
        android:orderInCategory="100"
        android:title="@string/abc_search_hint"
        app:showAsAction="always" />

    <item android:id="@+id/menu_settings"
          android:title="@string/menu_settings">
    </item>

    <item android:id="@+id/menu_edit"
          android:title="@string/menu_edit">
        <menu>
            <item android:id="@+id/menu_edit_terms"
                  android:title="@string/menu_edit_terms">
            </item>
            <item android:id="@+id/menu_edit_subjects"
                  android:title="@string/menu_edit_subjects">
            </item>
            <item android:id="@+id/menu_edit_classes"
                  android:title="@string/menu_edit_classes">
            </item>
        </menu>
    </item>
</menu>