<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary">

    <EditText
        android:id="@+id/setup_name_collection_first"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="166dp"
        android:backgroundTint="#ffffff"
        android:hint="@string/hint_name_first"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"/>

    <EditText
        android:id="@+id/setup_name_collection_last"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:backgroundTint="#ffffff"
        android:hint="@string/hint_name_last"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"/>

    <TextView
        android:id="@+id/nameEntryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:text="@string/label_name_entry"
        android:textColor="#ffffff"
        android:textSize="26sp"
        android:textStyle="bold"/>
</RelativeLayout>
