<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


    <EditText
        android:id="@+id/edittext_subject_name"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="34dp"
        android:hint="@string/hint_subject_name"
        android:inputType="textCapWords"/>

    <EditText
        android:id="@+id/edittext_teacher_input"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"

        android:layout_below="@+id/edittext_subject_name"
        android:layout_marginTop="40dp"
        android:hint="@string/hint_teacher_name"
        android:inputType="textCapWords"/>

    <EditText
        android:id="@+id/edittext_classroom_input"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="40dp"
        android:hint="@string/label_class_input"
        android:inputType="textCapWords"
        android:textColor="@color/colorPrimaryText"/>


    <EditText
        android:id="@+id/label_colour_input"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edittext_classroom_input"
        android:layout_marginTop="40dp"
        android:enabled="false"
        android:inputType="none"
        android:text="@string/label_color_picker"
        android:textColor="@color/colorPrimaryText"/>

    <View
        android:id="@+id/colour_bar"
        android:layout_width="300dp"
        android:layout_height="32dp"
        android:layout_alignBottom="@+id/label_colour_input"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="9dp"
        android:background="@color/colorPrimary"/>

</RelativeLayout>

