<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/wrapper_edittext_term_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/input_padding"
        android:layout_marginTop="@dimen/input_padding">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edittext_term_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_term_name"
            android:inputType="textCapWords"/>
    </android.support.design.widget.TextInputLayout>
    
    <android.support.design.widget.TextInputLayout
        android:id="@+id/wrapper_edittext_term_start_date"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wrapper_edittext_term_name"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="@dimen/input_padding"
        android:layout_marginBottom="@dimen/input_padding">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/edittext_term_start_date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/hint_term_start"
            android:inputType="date"
            android:textStyle="bold"
            android:layout_below="@+id/wrapper_edittext_term_start_date"
            android:layout_alignParentEnd="true"/>

    </android.support.design.widget.TextInputLayout>



    <android.support.design.widget.TextInputLayout
        android:id="@+id/wrapper_edittext_term_end_date"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/icon_calendar"
        android:layout_alignStart="@+id/wrapper_edittext_term_start_date">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/edittext_term_end_date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/hint_term_end"
            android:inputType="date"
            android:paddingStart="5dp"
            android:textStyle="bold"
            android:layout_alignParentEnd="true"/>
    </android.support.design.widget.TextInputLayout>




    <ImageView
        android:id="@+id/icon_calendar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/icon_calendar"
        android:layout_alignTop="@+id/wrapper_edittext_term_start_date"
        android:layout_alignParentStart="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="27dp"/>




</RelativeLayout>